name:                chalmers-lava2000
version:             1.1.0
homepage:            http://www.cs.chalmers.se/~koen/Lava/
synopsis:            Hardware description library
description:         Hardware description library
category:            Language, Hardware
license:             BSD3
license-file:        LICENSE
copyright:           (c) 2008. Koen Claessen <koen@chalmers.se>
author:              Koen Claessen <koen@chalmers.se>
maintainer:          Emil Axelsson <emax@chalmers.se>
cabal-version:       >= 1.2
build-type:          Simple
data-files:          README, INSTALL, Doc/tutorial.ps
extra-source-files:  Vhdl/lava.vhd, Scripts/satzoo.wrapper, Scripts/smv.wrapper

library
    exposed-modules:
                     Lava
                     Lava.Arithmetic
                     Lava.Captain
                     Lava.Combinational
                     Lava.ConstructiveAnalysis
                     Lava.Eprover
                     Lava.Error
                     Lava.Fixit
                     Lava.Generic
                     Lava.HeerHugo
                     Lava.IOBuffering
                     Lava.Isc
                     Lava.LavaDir
                     Lava.LavaRandom
                     Lava.Limmat
                     Lava.Modoc
                     Lava.MyST
                     Lava.Netlist
                     Lava.Operators
                     Lava.Patterns
                     Lava.Property
                     Lava.Ref
                     Lava.Retime
                     Lava.Satnik
                     Lava.Satzoo
                     Lava.Sequent
                     Lava.Sequential
                     Lava.SequentialCircuits
                     Lava.SequentialConstructive
                     Lava.Signal
                     Lava.SignalTry
                     Lava.Smv
                     Lava.Stable
                     Lava.Table
                     Lava.Test
                     Lava.Verification
                     Lava.Vhdl
                     Lava.Vis
                     Lava.Zchaff

    build-Depends:   base, haskell98, process

    extensions:      Rank2Types, ExistentialQuantification
    ghc-options:     -fno-warn-overlapping-patterns -fno-warn-missing-methods

