name:                chalmers-lava2000
version:             1.5
synopsis:            Hardware description EDSL
description:         For more info, see the tutorial: <http://projects.haskell.org/chalmers-lava2000/Doc/tutorial.pdf>
category:            Language, Hardware
license:             BSD3
license-file:        LICENSE
copyright:           (c) 2008. Koen Claessen <koen@chalmers.se>
author:              Koen Claessen <koen@chalmers.se>
maintainer:          Emil Axelsson <emax@chalmers.se>
homepage:            http://projects.haskell.org/chalmers-lava2000/Doc/tutorial.pdf
cabal-version:       >= 1.6
build-type:          Simple
data-files:          README, INSTALL, Doc/tutorial.pdf, Vhdl/lava.vhd

source-repository head
  type:     darcs
  location: http://projects.haskell.org/chalmers-lava2000/

library
    exposed-modules:
                     Lava
                     Lava.Arithmetic
                     Lava.Combinational
                     Lava.ConstructiveAnalysis
                     Lava.Error
                     Lava.Generic
                     Lava.IOBuffering
                     Lava.LavaRandom
                     Lava.MyST
                     Lava.Netlist
                     Lava.Operators
                     Lava.Patterns
                     Lava.Property
                     Lava.Ref
                     Lava.Retime
                     Lava.Sequent
                     Lava.Sequential
                     Lava.SequentialCircuits
                     Lava.SequentialConstructive
                     Lava.Signal
                     Lava.SignalTry
                     Lava.Stable
                     Lava.Table
                     Lava.Test
                     Lava.Vhdl

    build-Depends:   array, base >= 3 && < 5, process >= 1 && < 2, random

    extensions:      Rank2Types, ExistentialQuantification
    ghc-options:     -fno-warn-overlapping-patterns -fno-warn-missing-methods
